--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,14 +1,12 @@
 name: Go
 
-on: [push]
-#on:
-#  push:
-#    branches: [ $default-branch ]
-#  pull_request:
-#    branches: [ $default-branch ]
+on:
+  push:
+    branches: [ $default-branch ]
+  pull_request:
+    branches: [ $default-branch ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
